# MinecraftClone

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  bench.csv  commands.md
src/: main.c  main_bench.c  main_bench.c.short
src/core/: config.h  hmath.h  sokol_impl.c
src/player/: AGENTS.md  player.c  player.h
src/render/: AGENTS.md  render.c  render.h
src/world/: AGENTS.md  terrain.c  terrain.h  world.c  world.h
textures/: README.md
